updated Posts and image asset

--- a/_posts/2015-05-20-codeRamp.md
+++ b/_posts/2015-05-20-codeRamp.md
@@ -8,8 +8,4 @@ Over the last 2 weeks I've been auditing the pilot Hack Reactor "CodeRamp" cours
 
 So far the course has covered how to use the commandline for basic navigation, basic HTML and CSS, a taste of JavaScript, and dose of JQuery.  Students are starting to make portfolio websites, and number of them are pretty amazing.  Check out Alex Stein's site: http://alexistein.divshot.io/.  And how about Reid Schofflen's: http://staging.maker-square-app.divshot.io/#
 
-It's pretty clear that some of the people in the class have prior experience...I fall into that bucket too.
-
-![alt text](/assets/FreeCodeCampWhatWillILearn.jpg "Free Code Camp Curiculum")
-
-Curriculum
+It's pretty clear that some of the people in the class have prior experience...I fall into that bucket too.  The next post will be a brief introduction to how I create this site.
